start server methods